--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "next": "9.5.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "sass": "^1.26.10",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "swiper": "^8.1.0"
   }
 }
