fixed carousel padding in mobile view

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "Developent",
-    "endorsced",
-    "gratudate",
-    "mixins"
-  ]
+  "cSpell.words": ["Developent", "endorsced", "gratudate", "mixins", "Swiper"]
 }
