--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "next": "^12.1.4",
+    "next-sanity": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "sass": "^1.26.10",
