--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Developent", "endorsced", "gratudate", "mixins", "Swiper"]
+  "cSpell.words": [
+    "Developent",
+    "endorsced",
+    "gratudate",
+    "Hopstarter",
+    "mixins",
+    "Swiper"
+  ]
 }
