--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/image-url": "^1.0.1",
     "next": "^12.1.4",
     "next-sanity": "^3.1.2",
     "react": "^18.0.0",
@@ -21,5 +23,6 @@
     "sass": "^1.26.10",
     "styled-components": "^5.1.1",
     "swiper": "^8.1.0"
-  }
+  },
+  "devDependencies": {}
 }
