--- a/package.json
+++ b/package.json
@@ -16,11 +16,19 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "^2.0.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.10.1",
     "next": "^13.1.2",
-    "next-sanity": "^4.1.0",
+    "next-sanity": "^4.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sanity": "^3.10.1",
     "sass": "^1.57.1",
     "swiper": "^8.4.6"
+  },
+  "devDependencies": {
+    "@types/node": "^20.1.3",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "typescript": "^5.0.4"
   }
 }
